--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,8 +4,5 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["jest-global-mocks.ts", "setup-jest.ts", "**/*.spec.ts"]
 }
