--- a/package.json
+++ b/package.json
@@ -29,9 +29,15 @@
     "@ngrx/store-devtools": "^6.1.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.4.0",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-client": "^2.4.7",
+    "apollo-link": "^1.2.4",
     "core-js": "^2.5.4",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
-    "ngrx-data": "^6.1.0-beta.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "tslint-eslint-rules": "^5.4.0",
