Replaced ngrx with apollo-link-state and demonstrated with theme setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
   "files.exclude": {
     "node_modules": true
   },
-  "cSpell.words": ["Sidenav", "hammerjs", "mrobot"]
+  "cSpell.words": [
+    "Injectable",
+    "Sidenav",
+    "hammerjs",
+    "mrobot"
+  ]
 }
