--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@mdi/angular-material": "^3.0.39",
-    "@ngrx/effects": "^6.1.2",
-    "@ngrx/entity": "^6.1.2",
-    "@ngrx/store": "^6.1.2",
-    "@ngrx/store-devtools": "^6.1.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
+    "apollo-cache-inmemory": "^1.3.11",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.7",
     "apollo-link": "^1.2.4",
-    "core-js": "^2.5.4",
+    "apollo-link-http": "^1.5.7",
+    "apollo-link-state": "^0.4.2",
+    "core-js": "^2.5.7",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
+    "localforage": "^1.7.3",
+    "oidc-client": "^1.5.4",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.9.3",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-microsoft-contrib": "^5.2.1",
     "zone.js": "~0.8.26"
@@ -49,7 +50,6 @@
     "@angular/cli": "~7.1.0",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@ngrx/schematics": "^6.1.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
