--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdi/angular-material": "^3.0.39",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/moment-timezone": "^0.5.9",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
     "apollo-cache-inmemory": "^1.3.11",
@@ -34,14 +35,18 @@
     "apollo-link-http": "^1.5.7",
     "apollo-link-state": "^0.4.2",
     "core-js": "^2.5.7",
+    "countries-list": "^2.3.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
-    "oidc-client": "^1.5.4",
+    "lodash": "^4.17.11",
+    "moment-timezone": "^0.5.23",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.3",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-microsoft-contrib": "^5.2.1",
+    "tz-ids": "^1.0.0",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -51,7 +56,9 @@
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.118",
     "@types/node": "~8.9.4",
+    "@types/uuid": "^3.4.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
