--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,16 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "mdi.svg", "input": "./node_modules/@mdi/angular-material", "output": "./assets" }
+              {
+                "glob": "mdi.svg",
+                "input": "./node_modules/@mdi/angular-material",
+                "output": "./assets"
+              },
+              {
+                "glob": "*.png",
+                "input": "./node_modules/giift_country_flags/assets/png/22px",
+                "output": "./assets/country-flags"
+              }
             ],
             "styles": ["src/styles/mrobot-themes.sass", "src/styles.sass"],
             "scripts": []
