--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prettier": "prettier"
+    "prettier": "prettier --write **/*.ts",
+    "apollo-codegen": "run-s apollo-codegen-introspect apollo-codegen-generate",
+    "apollo-codegen-introspect": "apollo-codegen introspect-schema schema.graphql --output schema.json",
+    "apollo-codegen-generate": "apollo-codegen generate src/app/graphql/**/*.ts --schema schema.json --target typescript --output src/app/models/graphql.ts"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +41,7 @@
     "apollo-link-state": "^0.4.2",
     "core-js": "^2.5.7",
     "countries-list": "^2.3.2",
+    "giift_country_flags": "^1.0.3",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
@@ -73,6 +77,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^8.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.15.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
